# logix

./: .nvim.lua  Cargo.toml  LICENCE  README.md  examp.json
crates/asmhdl/: Cargo.toml
crates/asmhdl/src/: component.rs  data.rs  lib.rs  program.rs  value.rs
crates/asmhdl/src/parser/: component_parser.rs  grammar.lalrpop  grammar_mod_builder.rs  mod.rs
crates/logix_gui/: Cargo.toml
crates/logix_gui/examples/counter/: 2B_COUNT.lgxb  MAIN.lgxb
crates/logix_gui/src/: comp_board.rs  folder_tree.rs  logix_app.rs  main.rs
crates/logix_gui/src/app/: app_config.rs  board_editing.rs  comp_board.rs  comp_info.rs  errors.rs  folder_tree.rs  logix_app.rs  mod.rs  shortcuts.rs
crates/logix_gui/src/app/impls/: canvas_ui.rs  constants.rs  left_panel_ui.rs  mod.rs  new_project_ui.rs  top_panel_ui.rs  welcome_ui.rs  wire_dir.rs
crates/logix_gui/src/app/impls/comp_ui/: component_ui.rs  conns_ui.rs  input_pins_ui.rs  menu_ui.rs  mod.rs  new_conn_ui.rs  output_pins_ui.rs
crates/logix_gui/src/app/impls/on_project_ui/: canvas_ui.rs  left_panel_ui.rs  mod.rs  tabs_ui.rs  top_panel_ui.rs  wire_dir.rs
crates/logix_gui/src/app/impls/on_project_ui/comp_ui/: component_ui.rs  conns_ui.rs  input_pins_ui.rs  menu_ui.rs  new_conn_ui.rs  output_pins_ui.rs
crates/logix_gui/src/app_ui/: app_config.rs  app_data.rs  app_state.rs  app_utils.rs  board_editing.rs  comp_board.rs  comp_info.rs  folder_tree.rs  id_map.rs  library.rs  logix_app.rs  mod.rs  shortcuts.rs
crates/logix_gui/src/app_ui/board/: board.rs  board_actions.rs  board_comp.rs  board_conn.rs  board_io.rs  comp_info.rs  comp_source.rs  io_info.rs  mod.rs
crates/logix_gui/src/app_ui/component/: comp_board.rs  comp_info.rs  mod.rs
crates/logix_gui/src/app_ui/pages/: new_project_ui.rs  welcome_ui.rs
crates/logix_gui/src/app_ui/pages/on_project_ui/: canvas_payload.rs  canvas_ui.rs  constants.rs  empty_ui.rs  left_panel_ui.rs  library_ui.rs  mod.rs  on_project_utils.rs  status_bar_ui.rs  tabs_ui.rs  top_panel_ui.rs  wire_dir.rs
crates/logix_gui/src/app_ui/pages/on_project_ui/comp_ui/: component_ui.rs  conns_ui.rs  input_pins_ui.rs  menu_ui.rs  new_conn_ui.rs  output_pins_ui.rs
crates/logix_lang/: Cargo.toml
crates/logix_lang/examples/: adders.lgx  counters.lgx  flip_flops.lgx  main.lgx
crates/logix_lang/src/: ast.rs  builder.rs  grammar.lalrpop  lib.rs  main.rs  primitive_builders.rs
engine/: Cargo.toml
flutter_logix_gui/: README.md  pubspec.yaml
logix/: Cargo.toml
logix_sim/: Cargo.toml
serialize/: Cargo.toml
src/: component.rs  id_factory.rs  json_serialization.rs  logic_gate.rs  (+5 more)
(+113 files in other folders)
