[package]
name = "asmhdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
log = "0.4.21"
serde = { version = "1.0.207", features = ["derive"] }
env_logger = "0.11.3"
thiserror = "1.0.24"
indexmap = "2.5.0"

[build-dependencies]
lalrpop = "0.21.0"

