[package]
name = "logix_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logix_core = { path = "../logix_core" }
logix_sim = { path = "../logix_sim" }
eframe = "0.28.1"
egui = { version = "0.28.1", features = ["serde"] }
rfd = "0.14.1"
serde = "1.0.207"
serde_json = "1.0"
