[package]
name = "logix_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logix_core = { path = "../logix_core" }
logix_sim = { path = "../logix_sim" }
lalrpop-util = "0.20.2"
log = "0.4.21"
env_logger = "0.11.3"
thiserror = "1.0.24"

[build-dependencies]
lalrpop = "0.20.2"
