[package]
name = "logix_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logix_core = { path = "../logix_core" }
logix_sim = { path = "../logix_sim" }
asmhdl = { path = "../asmhdl" }
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
log = "0.4.21"
env_logger = "0.11.3"
thiserror = "1.0.24"

[build-dependencies]
lalrpop = "0.21.0"
